--- a/src/resources/sass/components/_blog.sass
+++ b/src/resources/sass/components/_blog.sass
@@ -3,53 +3,53 @@
 
 .s-blog
   padding-top: 12rem
-  .container
-    .blog-news
-      display: flex
-      gap: 3rem
-      .blog-news-left
-        width: 70%
-        .news-left
-          border: 1px solid #e0e1e1
-          border-radius: 5px
-          padding: 2rem
-          margin: 3rem 0
-          h3
-            margin: 2rem 0
-          a
-            img
-              width: 100%
-          .date-news-left
-            margin-top: -2rem
-            margin-bottom: 2rem
-          .text-news-left
-            margin-bottom: 2rem
-        .first-news-page
-          margin-top: 0
-      .blog-news-right
-        width: 30%
-        .blog-right-agendar-consulta
-          padding: 2rem
-          border: 1px solid #e0e1e1
-          border-radius: 5px
-          margin-bottom: 3rem
-        .search-blog
-          padding: 2rem
-          border: 1px solid #e0e1e1
-          border-radius: 5px
-        .blog-post-recente
-          padding: 2rem
-          border: 1px solid #e0e1e1
-          border-radius: 5px
-          .link-recente-posts
-            margin: 2rem 0
-            border-bottom: 1px solid #e0e1e1
-            padding: 1rem 0
-          .title-post-recente
-            margin-bottom: 2rem
-            border-bottom: 1px solid #e0e1e1
-          .link-post-recente
-            margin: 2rem 0
+  // .container
+  .blog-news
+    display: flex
+    gap: 3rem
+    .blog-news-left
+      width: 70%
+      .news-left
+        border: 1px solid #e0e1e1
+        border-radius: 5px
+        padding: 2rem
+        margin: 3rem 0
+        h3
+          margin: 2rem 0
+        a
+          img
+            width: 100%
+        .date-news-left
+          margin-top: -2rem
+          margin-bottom: 2rem
+        .text-news-left
+          margin-bottom: 2rem
+      .first-news-page
+        margin-top: 0
+    .blog-news-right
+      width: 30%
+      .blog-right-agendar-consulta
+        padding: 2rem
+        border: 1px solid #e0e1e1
+        border-radius: 5px
+        margin-bottom: 3rem
+      .search-blog
+        padding: 2rem
+        border: 1px solid #e0e1e1
+        border-radius: 5px
+      .blog-post-recente
+        padding: 2rem
+        border: 1px solid #e0e1e1
+        border-radius: 5px
+        .link-recente-posts
+          margin: 2rem 0
+          border-bottom: 1px solid #e0e1e1
+          padding: 1rem 0
+        .title-post-recente
+          margin-bottom: 2rem
+          border-bottom: 1px solid #e0e1e1
+        .link-post-recente
+          margin: 2rem 0
     .list-itens-posts-pages
       margin-top: 4rem
       width: 68.2%
