--- a/src/resources/sass/components/_index.sass
+++ b/src/resources/sass/components/_index.sass
@@ -1,6 +1,9 @@
 @import './_pattern'
 @import './_responsive'
 
+.rating
+  color: #fff
+
 .s-tratamento-base
   // .container
   .info-tratamento-base
