--- a/src/resources/sass/components/_blog.sass
+++ b/src/resources/sass/components/_blog.sass
@@ -105,3 +105,16 @@
         font-weight: bold
         font-size: 2.5rem
         color: $color-p
+
+.news-left
+  p
+    color: $color-p
+  ul
+    li
+      color: $color-p
+  strong
+    color: $color-titulo
+
+.tags-pages-blog
+  a
+    color: $color-p
