--- a/src/resources/css/main.css
+++ b/src/resources/css/main.css
@@ -2061,6 +2061,18 @@ body {
         font-size: 2.5rem;
         color: #7a7a7a; }
 
+.news-left p {
+  color: #7a7a7a; }
+
+.news-left ul li {
+  color: #7a7a7a; }
+
+.news-left strong {
+  color: #7B7B7B; }
+
+.tags-pages-blog a {
+  color: #7a7a7a; }
+
 body {
   font-family: 'Roboto'; }
 
