--- a/src/resources/sass/components/_button-wpp.sass
+++ b/src/resources/sass/components/_button-wpp.sass
@@ -9,7 +9,8 @@
     border-radius: 56px
     line-height: 1.6rem
     background: $bege-padrao
-    width: 35rem
+    // width: 35rem
+    white-space: nowrap !important
     color: $branco-padrao
     text-transform: uppercase
     text-align: center
