--- a/src/resources/sass/components/_banner.sass
+++ b/src/resources/sass/components/_banner.sass
@@ -44,3 +44,10 @@
       img
         background-color: $branco-padrao
         margin-bottom: 1rem
+  
+@media only screen and (max-width: 426px)
+  .text-first
+    p
+      font-size: 39px !important
+    h1
+      font-size: 19px !important
