--- a/src/resources/sass/components/_button-wpp.sass
+++ b/src/resources/sass/components/_button-wpp.sass
@@ -10,7 +10,7 @@
     line-height: 1.6rem
     background: $bege-padrao
     // width: 35rem
-    white-space: nowrap !important
     color: $branco-padrao
     text-transform: uppercase
     text-align: center
+    white-space: nowrap
