--- a/src/resources/sass/components/_header.sass
+++ b/src/resources/sass/components/_header.sass
@@ -171,4 +171,6 @@ nav
     > .submenu--cirurgia 
         display: block
                     
-    
+@media only screen and (max-width: 768px)
+  .main-menu
+    display: none 
