--- a/src/resources/sass/main.css
+++ b/src/resources/sass/main.css
@@ -1549,6 +1549,11 @@ nav .call {
   display: block;
 }
 
+@media only screen and (max-width: 768px) {
+  .main-menu {
+    display: none !important;
+  }
+}
 body {
   font-family: "Roboto";
 }
@@ -1767,7 +1772,7 @@ body {
   border-radius: 56px;
   line-height: 1.6rem;
   background: #c8bcac;
-  white-space: nowrap !important;
+  width: 35rem;
   color: #ffffff;
   text-transform: uppercase;
   text-align: center;
