--- a/src/resources/sass/components/_header.sass
+++ b/src/resources/sass/components/_header.sass
@@ -170,7 +170,16 @@ nav
     color: #000
     > .submenu--cirurgia 
         display: block
-                    
+
+.menu-toggle
+  display: none
+
 @media only screen and (max-width: 768px)
   .main-menu
-    display: none 
+    display: none
+
+  .main-menu-mobile
+    display: none
+
+  .menu-toggle
+    display: block
