--- a/src/resources/css/header-teste.css
+++ b/src/resources/css/header-teste.css
@@ -8,7 +8,7 @@
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
-  height: 80vh;
+  height: 100vh;
 }
 
 .sidepanel a {
@@ -44,69 +44,25 @@
   background-color:#444;
 }
 
-/* Dropdown*/
-.dropbtn {
-  background-color: #3498DB;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-}
-
-.dropbtn:hover, .dropbtn:focus {
-  background-color: #2980B9;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  overflow: auto;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
+/* Dropdown-teste*/
+label {
   display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
 }
 
-.dropdown a:hover {background-color: #ddd;}
-
-.show {display: block;}
-
-/*Togle tratamento*/
-/* .accordion {
-  background-color: #eee;
-  color: #444;
-  cursor: pointer;
-  padding: 18px;
+/* Estilizando o select */
+select {
+  margin: 1rem 0;
   width: 100%;
+  padding: 5px;
   border: none;
-  text-align: left;
-  outline: none;
-  font-size: 15px;
-  transition: 0.4s;
+  font-size: 16px;
+  color: #444;
+  background-color: #111;
 }
 
-.active, .accordion:hover {
-  background-color: #ccc; 
+/* Estilizando as opções */
+option {
+  color: #444;
 }
-
-.panel {
-  padding: 0 18px;
-  display: none;
-  background-color: white;
-  overflow: hidden;
-} */
-
-/*-------------------------------------------------*/
