--- a/src/resources/sass/components/_header.sass
+++ b/src/resources/sass/components/_header.sass
@@ -171,15 +171,12 @@ nav
     > .submenu--cirurgia 
         display: block
 
-.menu-toggle
+.openbtn
   display: none
 
 @media only screen and (max-width: 768px)
   .main-menu
     display: none
 
-  .main-menu-mobile
-    display: none
-
-  .menu-toggle
+  .openbtn
     display: block
