--- a/src/resources/sass/components/_blog.sass
+++ b/src/resources/sass/components/_blog.sass
@@ -118,3 +118,20 @@
 .tags-pages-blog
   a
     color: $color-p
+
+@media only screen and (max-width: 769px)
+  .blog-news
+    display: block !important
+  
+  .blog-news-left
+    width: 100% !important
+  
+  .blog-news-right
+    width: 100% !important
+
+  .blog-right-agendar-consulta
+    .call
+      text-align: center !important
+
+  .list-itens-posts-pages
+    width: 100% !important
