--- a/src/resources/sass/components/_blog.sass
+++ b/src/resources/sass/components/_blog.sass
@@ -128,6 +128,8 @@
   
   .blog-news-right
     width: 100% !important
+    .call
+      text-align: center !important
 
   .blog-right-agendar-consulta
     .call
@@ -135,3 +137,12 @@
 
   .list-itens-posts-pages
     width: 100% !important
+
+  .tags-pages-blog
+    width: 100% !important
+    font-size: 14px !important
+    margin-top: 0.2rem !important
+
+  .search-blog
+    padding: 0 !important
+    margin-top: 3rem !important
