--- a/src/resources/css/header-mobile.css
+++ b/src/resources/css/header-mobile.css
@@ -4,7 +4,7 @@
   z-index: 1;
   top: 0;
   right: 0;
-  background-color: #111;
+  background-color: #222B34;
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
@@ -60,7 +60,7 @@ select {
   border: none;
   font-size: 16px;
   color: #757575;
-  background-color: #111;
+  background-color: #222B34;
 }
 
 /* Estilizando as opções */
