ajuste day-clinic

--- a/src/resources/sass/components/_day-clinic.sass
+++ b/src/resources/sass/components/_day-clinic.sass
@@ -6,6 +6,7 @@
   .info-dayClinic
     display: flex
     width: 100% 
+    margin-top: 15rem
     .dayClinic-left
       display: flex
       flex-direction: column
