--- a/src/resources/sass/components/_header.sass
+++ b/src/resources/sass/components/_header.sass
@@ -13,6 +13,7 @@ header
   box-shadow: 0 0 5px 2px rgba(0,0,0,.33)
   position: fixed
   z-index: 1111
+  top: 0
 
 /* Estilos para os links do header */
 header a 
