--- a/src/resources/sass/components/_contato.sass
+++ b/src/resources/sass/components/_contato.sass
@@ -8,6 +8,7 @@
   align-items: center
   background-image: url("https://www.aclinicaoral.com.br/wp-content/uploads/background-agendar-consulta.jpg")
   padding-bottom: 4rem
+  margin-top: 15rem
   .box-contato
     background: #fff
     margin-top: 2rem
