--- a/src/resources/css/main.css
+++ b/src/resources/css/main.css
@@ -91,7 +91,8 @@ body {
       -ms-flex-align: center;
           align-items: center;
   background-image: url("https://www.aclinicaoral.com.br/wp-content/uploads/background-agendar-consulta.jpg");
-  padding-bottom: 4rem; }
+  padding-bottom: 4rem;
+  margin-top: 15rem; }
   .s-contato .box-contato {
     background: #fff;
     margin-top: 2rem;
@@ -1266,7 +1267,8 @@ body {
   margin: 0 0 0 20% !important; }
 
 .s-tratamento-base {
-  margin: 6rem 0; }
+  margin: 6rem 0;
+  margin-top: 15rem; }
   .s-tratamento-base .info-tratamento-base {
     display: -webkit-box;
     display: -webkit-flex;
