--- a/src/resources/sass/components/_depoimentos.sass
+++ b/src/resources/sass/components/_depoimentos.sass
@@ -11,3 +11,15 @@
         text-align: center
         margin-bottom: 2rem
         color: #fff
+
+.checked
+  color: #fff
+  margin-right: 0.5rem
+
+.slick-slide
+  p
+    max-width: 80%
+    color: #fff
+  h3
+    color: #fff
+    margin-bottom: 1rem
