--- a/src/resources/sass/components/_blog.sass
+++ b/src/resources/sass/components/_blog.sass
@@ -146,3 +146,28 @@
   .search-blog
     padding: 0 !important
     margin-top: 3rem !important
+
+  .list-pages-post 
+    ul 
+      li 
+        a
+          margin: 0 !important
+    
+  .news-left
+    strong
+      font-size: 14px !important
+    
+  .list-itens
+    strong
+      font-size: 14px !important
+    ul
+      li
+        p
+          font-size: 14px !important
+        a
+          font-size: 14px !important
+
+  .divisao-tags-page
+    a
+      font-size: 14px !important
+      margin: 0.5rem !important
