--- a/src/resources/sass/components/_depoimentos.sass
+++ b/src/resources/sass/components/_depoimentos.sass
@@ -23,3 +23,12 @@
   h3
     color: #fff
     margin-bottom: 1rem
+
+@media only screen and (max-width: 769px)
+  .depoimentos-itens
+    img
+      width: 80px !important
+      height: 80px !important
+
+  #reviews-carousel
+    padding: 0 3rem !important
