--- a/src/resources/sass/components/_depoimentos.sass
+++ b/src/resources/sass/components/_depoimentos.sass
@@ -26,9 +26,17 @@
 
 @media only screen and (max-width: 769px)
   .depoimentos-itens
+    margin-left: 0 !important
+    padding: 1rem !important
     img
       width: 80px !important
       height: 80px !important
+    .text-apost
+      width: 100%
 
   #reviews-carousel
     padding: 0 3rem !important
+  
+  .box-depoimento 
+    div
+      padding: 0 !important
